# dw

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  Tiltfile
analytics/: .bashrc  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements_base.txt
analytics/.devcontainer/: devcontainer.json
analytics/.prefect/: .gitignore
analytics/examples/tutorial/: prefect.yaml
analytics/examples/tutorial/api/: main.py
analytics/examples/tutorial/config/: settings.py
analytics/examples/tutorial/flows/: notebook.py
analytics/examples/tutorial/notebooks/: database.ipynb  greet.ipynb
analytics/package/: dbt.py  peerdb.py  project.py  types.py
analytics/package/cli/: dbt_cli.py  dbt_docs_cli.py  peerdb_cli.py  prefect_cli.py  project_cli.py
analytics/package/config/: settings.py
analytics/package/database/: __init__.py
analytics/package/database/adapters/: base.py  clickhouse.py  postgres.py
analytics/package/polyfactory/factories/: sqlmodel_factory.py
analytics/package/tests/cli/: test_prefect_cli.py
analytics/package/tests/database/adapters/: test_clickhouse.py  test_postgres.py
analytics/package/tests/fixtures/: database.py
analytics/package/tests/peerdb/: test_prepare_config.py
analytics/package/tests/utils/sqlmodel_utils/: test_create_model_code.py
analytics/package/utils/: prefect_utils.py  settings.py  sqlmodel_utils.py  template.py
analytics/templates/project/: .pre-commit-config.yaml  peerdb.yaml  pyproject.toml
analytics/templates/project/config/: settings.py
docs/: 01-install.md
scripts/: cli.sh  deployment-create.sh  deployment-install.sh  docker.sh  install.sh  open.sh
templates/: jinja.py
templates/deploy/analytics/: docker-compose.yml.jinja
templates/deploy/analytics/prefect-worker/: healthcheck.py
templates/deploy/clickhouse/: docker-compose.yml
templates/deploy/clickhouse/users.d/: override.xml.jinja
templates/deploy/peerdb/: docker-compose.yml
