[project]
name = "analytics"
version = "0.0.1"
description = "Analytics"
requires-python = ">=3.12"
dependencies = [
    "dw-lib",
    "pandas>=2.2.3",
]

[tool.isort]
force_alphabetical_sort = true
line_length = 100
profile = "black"
py_version = 312

[tool.ruff]
extend-exclude = ["*.ipynb"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D205"]

[tool.pytest.ini_options]
addopts = "--no-header -vv"
norecursedirs = [
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "node_modules",
    "venv",
    "{arch}",
    "__pycache__",
    "dbt_packages"
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.uv.sources]
clickhouse-sqlalchemy = { git = "https://github.com/netbek/clickhouse-sqlalchemy.git", rev = "datetime-uuid" }
dbt-clickhouse = { git = "https://github.com/netbek/dbt-clickhouse.git", rev = "v1.8.9-batch" }
dw-lib = { git = "https://github.com/netbek/dw-lib.git", rev = "0.0.7" }

[tool.uv.workspace]
members = ["analytics"]

[dependency-groups]
api = [
    "litestar[standard]>=2.14.0",
]
dev = [
    "isort>=5.13.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "sqlfluff>=3.3.1",
    "sqlfluff-templater-dbt>=3.3.1",
    "time-machine>=2.16.0",
    "yamllint>=1.35.1",
]
jupyter = [
    "nbclassic>=1.0.0",
    "notebook>=7.2.2",
]
